# rs4se

./: .gitignore  CMakeLists.txt  ToDo.txt  rs4se_rviz_config.rviz
include/auto_exp/: auto_exp.h
include/vo_autoexpose/: vo_autoexpose.h
launch/: intel_d435i.launch  intel_d435i_gvins.launch
src/: auto_exp.cpp  intel_d435i.cpp  rs4se.hpp  vo_autoexpose.cpp
